--- a/Express/hello_express/views/index.ejs
+++ b/Express/hello_express/views/index.ejs
@@ -17,11 +17,11 @@
         <h1>Hello Express!!</h1>
 
         <form action="/process" method="post">
-            <div class="form-group">
+            <div class="form-group col-sm-6">
                 <label>Name</label>
                 <input type="text" name="name" class="form-control" placeholder="Enter full name">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn-sm btn-primary">Submit</button>
         </form>
 
     </div>
@@ -31,6 +31,23 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!-- Configuring client side w/socket.io -->
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+        // this triggers the connection event in our server!
+        var socket = io.connect();
+        // we'll write all the socket stuff after the above line!
+
+        $('button').click(function() {
+            socket.emit("button_clicked", {
+                reason: "because I want to learn about sockets!"
+            });
+        });
+        socket.on('server_response', function(data) {
+            console.log('The server says: ' + data.response);
+        });
+    </script>
 </body>
 
 </html>
