--- a/Express/epicButtonGame/views/index.ejs
+++ b/Express/epicButtonGame/views/index.ejs
@@ -23,7 +23,7 @@
         </p>
         <button type="button" id="lgButton" class="btn btn-primary">EPIC BUTTON</button>
         <hr>
-        <button type="button" id="reset" class="btn btn-danger">Reset</button>
+        <button type="button" id="reset" class="btn btn-danger pull-right">Reset</button>
 
     </div>
 
