--- a/Express/groupChat/static/style.css
+++ b/Express/groupChat/static/style.css
@@ -1,4 +1,14 @@
-#content {
+#message_board {
     border: 1px solid black;
-    height: 400px;
+    height: 300px;
+    margin-bottom: 15px;
+    overflow: auto;
+}
+
+#online_users {
+    border: 1px solid black;
+    height: 200px;
+    width: 25%;
+    margin-bottom: 15px;
+    overflow: auto;
 }
