--- a/Express/groupChat/static/style.css
+++ b/Express/groupChat/static/style.css
@@ -1,8 +1,13 @@
+#container {
+    padding: 5px;
+}
+
 #message_board {
     border: 1px solid black;
     height: 300px;
     margin-bottom: 15px;
     overflow: auto;
+    padding: 5px;
 }
 
 #online_users {
@@ -11,4 +16,5 @@
     width: 25%;
     margin-bottom: 15px;
     overflow: auto;
+    padding: 5px;
 }
