--- a/MongoDB/basic_mongo_app/views/index.ejs
+++ b/MongoDB/basic_mongo_app/views/index.ejs
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
     <title>Basic Mongo App</title>
 </head>
 
@@ -17,6 +17,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <h1>Basic Mongo App</h1>
         </nav>
+        <hr>
+        <h3>Users in DB</h3>
+        <div class="currentUsers">
+            <% for (var i = 0; i < users.length; i++){ %>
+                <p><%= users[i].name %></p>
+            <% } %>
+        </div>
+
         <form action="/users" method="post">
             <div class="form-group col-sm-6">
                 <label for="name">Name:</label>
@@ -26,7 +34,8 @@
                 <label for="age">Age:</label>
                 <input type="text" class="form-control" name="age" placeholder="Age">
             </div>
-            <button type="submit" class="btn btn-outline-primary">Submit</button>
+            <hr>
+                <button type="submit" class="btn btn-outline-primary">Submit</button>
         </form>
     </div>
 
