--- a/MongoDB/quoting_dojo/views/quotes.ejs
+++ b/MongoDB/quoting_dojo/views/quotes.ejs
@@ -15,22 +15,16 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1>Welcome to the Quoting Dojo</h1>
+            <h1>Here Are Some Awesome Quotes!!!</h1>
         </nav>
-
-        <form action="/quotes" method="post">
-            <div class="form-group col-sm-6">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" name="name" placeholder="Name">
-            </div>
-            <div class="form-group col-sm-6">
-                <label for="quote">Quote:</label>
-                <textarea class="form-control" name="quote" rows="3"></textarea>
-            </div>
-            <hr>
-                <button type="submit" class="btn btn-outline-primary">Add My Quote</button>
-                <a class="btn btn-outline-danger" href="/quotes" role="button">Skip to Quotes</a>
-        </form>
+        <section id="user_info">
+            <% for( const user of users) { %>
+                <h4>'<%= user.quote %>'</h4>
+                <p>-<b><%= user.name %></b> at <%= user.date%></p>
+                <hr>
+            <% } %>
+        </section>
+        <a class="btn btn-outline-primary" href="/" role="button">Return Home</a>
     </div>
 
     <!-- Optional JavaScript -->
