--- a/MongoDB/mongoose_dashboard/views/new.ejs
+++ b/MongoDB/mongoose_dashboard/views/new.ejs
@@ -8,15 +8,35 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <title>Mongoose Dashboard</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1>Sow Anaimals</h1>
+            <h1>Create New Primate</h1>
         </nav>
+
+        <form action="/primates" method='post'>
+            <div class="form-group">
+                <label>Name:</label>
+                <input type="text" class="form-control" name="name" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label>Color:</label>
+                <input type="text" class="form-control" name="color" placeholder="Color">
+            </div>
+            <div class="form-group">
+                <label>Weight:</label>
+                <input type="text" class="form-control" name="weight" placeholder="Weight">
+            </div>
+            <div class="form-group">
+                <label>Origin:</label>
+                <input type="text" class="form-control" name="origin" placeholder="Origin">
+            </div>
+            <button type="submit" class="btn btn-primary">Add New Primate</button>
+            <a class="btn btn-primary" href="/primates" role="button">Home</a>
+        </form>
     </div>
 
     <!-- Optional JavaScript -->
