--- a/MongoDB/mongoose_dashboard/views/index.ejs
+++ b/MongoDB/mongoose_dashboard/views/index.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Mongoose Dashboard</title>
@@ -13,24 +13,13 @@
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a id="title" class="navbar-brand" href="#">Mongoose Dashboard Primates</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/primates">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/primates/new">Create New Primate</a>
-                    </li>
-                </ul>
-            </div>
+
+        <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+            <h1>Mongoose Dashboard Primates</h1>
         </nav>
 
         <h5>Primate Info:</h5>
+        <a href="/primates/new" class="badge badge-primary">Create New Primate</a>
 
         <table class="table table-striped table-dark">
             <thead>
