--- a/MongoDB/mongoose_dashboard/views/new.ejs
+++ b/MongoDB/mongoose_dashboard/views/new.ejs
@@ -18,24 +18,25 @@
         </nav>
 
         <form action="/primates" method='post'>
-            <div class="form-group">
+            <div class="form-group col-sm-6">
                 <label>Name:</label>
                 <input type="text" class="form-control" name="name" placeholder="Name">
             </div>
-            <div class="form-group">
+            <div class="form-group col-sm-6">
                 <label>Color:</label>
                 <input type="text" class="form-control" name="color" placeholder="Color">
             </div>
-            <div class="form-group">
+            <div class="form-group col-sm-6">
                 <label>Weight:</label>
                 <input type="text" class="form-control" name="weight" placeholder="Weight">
             </div>
-            <div class="form-group">
+            <div class="form-group col-sm-6">
                 <label>Origin:</label>
                 <input type="text" class="form-control" name="origin" placeholder="Origin">
             </div>
-            <button type="submit" class="btn btn-primary">Add New Primate</button>
-            <a class="btn btn-primary" href="/primates" role="button">Home</a>
+            <hr>
+            <button type="submit" class="btn btn-outline-primary">Add New Primate</button>
+            <a class="btn btn-outline-danger" href="/primates" role="button">Home</a>
         </form>
     </div>
 
