--- a/MongoDB/message_board/views/index.ejs
+++ b/MongoDB/message_board/views/index.ejs
@@ -16,6 +16,17 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <h1>The Dojo Message Board</h1>
         </nav>
+        <form>
+            <div class="form-group col-sm-6">
+                <label>Name:</label>
+                <input type="text" name="name" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group col-sm-6">
+                <label>Message:</label>
+                <textarea name="message" rows="3" class="form-control" placeholder="Message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-outline-primary">Submit</button>
+        </form>
     </div>
 
     <!-- Optional JavaScript -->
