--- a/MongoDB/login_register/client/views/register.ejs
+++ b/MongoDB/login_register/client/views/register.ejs
@@ -15,7 +15,7 @@
     <div class="container">
 
         <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1>Login</h1>
+            <h1>Registration</h1>
         </nav>
 
         <div id="errors">
@@ -28,19 +28,38 @@
             <% } %>
         </div>
 
-        <h4>User Login</h4>
-        <form action="/" method="post">
+        <h4>User Registration</h4>
+        <form action="/register" method="post">
+            <div class="form-group col-sm-6">
+                <label>First Name</label>
+                <input type="text" class="form-control" name="first_name" placeholder="First Name">
+            </div>
+            <div class="form-group col-sm-6">
+                <label>Last Name</label>
+                <input type="text" class="form-control" name="last_name" placeholder="Last Name">
+            </div>
             <div class="form-group col-sm-6">
                 <label>Email address</label>
                 <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group col-sm-6">
+                <label>Date of Birth</label>
+                <input type="date" class="form-control" name="birthday" placeholder="Date of Birth">
+            </div>
+            <div class="form-group col-sm-6">
                 <label>Password</label>
                 <input type="password" class="form-control" name="password" placeholder="Password">
+                <small class="form-text text-muted">
+                    Password must be 8-20 characters long, have a minimum 1 number, 1 uppercase and 1 special character.
+                </small>
+            </div>
+            <div class="form-group col-sm-6">
+                <label>Confirm Password</label>
+                <input type="password" class="form-control" name="confirm_password" placeholder=" Confirm Password">
             </div>
             <hr>
-            <button type="submit" class="btn btn-outline-primary col-sm-6">Login</button>
-            <a href="/register"><button type="button" class="btn btn-outline-danger col-sm-6">Go to registration page</button></a>
+            <button type="submit" class="btn btn-outline-primary col-sm-6">Register</button>
+            <a href="/"><button type="button" class="btn btn-outline-danger col-sm-6">Go to login page</button></a>
         </form>
     </div>
 
