--- a/Angular/registrationForm/src/app/app.component.html
+++ b/Angular/registrationForm/src/app/app.component.html
@@ -1,42 +1,131 @@
 <div class="container">
-  <h1>{{ title }}</h1>
-  <form>
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+      <h1>{{title}}</h1>
+    </nav>
+  <hr>
+
+  <div *ngIf="form.valid">
+    <p>Thank you for registering with us {{ user.fName }}.</p>
+    <p>We just sent you a confirmation email at {{ user.email }},and</p>
+    <p>we will send all mail to {{ user.address }}, {{ user.city }} {{ user.state }}.</p>
+    <p>Have a wonderful day!</p>
+  </div>
+
+  <form (submit)="form.valid && onSubmit($event, form)" #form='ngForm'>
+
       <div class="form-row">
         <div class="form-group col-md-6">
           <label>First Name</label>
-          <input type="text" class="form-control" placeholder="First Name">
+          <input
+          type="text"
+          class="form-control"
+          name='fName'
+          placeholder="First Name"
+          required
+          minlength='2'
+          maxlength='24'
+          [(ngModel)]="user.fName"
+          #fName='ngModel'
+          >
         </div>
+
         <div class="form-group col-md-6">
           <label>Last Name</label>
-          <input type="text" class="form-control" placeholder="Last Name">
+          <input
+          type="text"
+          class="form-control"
+          name='lName'
+          placeholder="Last Name"
+          required
+          minlength="2"
+          maxlength="24"
+          [(ngModel)]="user.lName"
+          #lName='ngModel'
+          >
         </div>
       </div>
+
       <div class="form-row">
         <div class="form-group col-md-6">
           <label>Email</label>
-          <input type="email" class="form-control" placeholder="Email">
+          <input
+          type="email"
+          class="form-control"
+          name='email'
+          placeholder="Email"
+          required
+          minlength="4"
+          maxlength="34"
+          [(ngModel)]="user.email"
+          #email='ngModel'
+          >
         </div>
+
         <div class="form-group col-md-6">
           <label>Password</label>
-          <input type="password" class="form-control" placeholder="Password">
+          <input
+          type="password"
+          class="form-control"
+          name='password'
+          placeholder="Password"
+          required
+          minlength="10"
+          maxlength="24"
+          pattern="^([a-zA-Z0-9@*#]{8,15})$"
+          [(ngModel)]="user.password"
+          #password='ngModel'
+          >
         </div>
       </div>
+
       <div class="form-group">
         <label>Address</label>
-        <input type="text" class="form-control" placeholder="1234 Main St">
+        <input
+        type="text"
+        class="form-control"
+        name='address'
+        placeholder="1234 Main St"
+        required
+        [(ngModel)]="user.address"
+        #address='ngModel'
+        >
       </div>
+
       <div class="form-group">
         <label>Address 2</label>
-        <input type="text" class="form-control" placeholder="Apartment, studio, or floor">
+        <input
+        type="text"
+        class="form-control"
+        name='unit'
+        placeholder="Apartment, studio, or floor"
+        [(ngModel)]="user.unit"
+        #unit='ngModel'
+        >
       </div>
+
       <div class="form-row">
         <div class="form-group col-md-6">
           <label>City</label>
-          <input type="text" class="form-control">
+          <input
+          type="text"
+          class="form-control"
+          name='city'
+          required
+          [(ngModel)]="user.city"
+          #city='ngModel'
+          >
         </div>
+
         <div class="form-group col-md-4">
           <label>State</label>
-          <select id="inputState" class="form-control">
+          <select
+          id="inputState"
+          class="form-control"
+          name='state'
+          required
+          [(ngModel)]="user.state"
+          #state='ngModel'
+          >
             <option selected>Choose...</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -91,23 +180,48 @@
             <option value="WY">Wyoming</option>
           </select>
         </div>
+
         <div class="form-group col-md-2">
           <label>Zip</label>
-          <input type="text" class="form-control">
+          <input
+          type="text"
+          class="form-control"
+          name='zip'
+          required
+          [(ngModel)]="user.zip"
+          #zip='ngModel'
+          >
         </div>
       </div>
+
       <div class="form-group">
           <div class="form-check form-check-inline">
               <label class="form-check-label" for="inlineRadio1">Are you feelin lucky today?</label>
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" value="option1">
+              <input
+              class="form-check-input"
+              type="radio"
+              name="lucky"
+              [(ngModel)]="user.lucky"
+              #lucky='ngModel'
+              value="Yes"
+              >
               <label class="form-check-label" for="inlineRadio1">Yes</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" value="option2">
+              <input
+              class="form-check-input"
+              type="radio" name="lucky"
+              [(ngModel)]="user.lucky"
+              #lucky='ngModel'
+              value="No"
+              >
               <label class="form-check-label" for="inlineRadio2">No</label>
             </div>
       </div>
+
       <button type="submit" class="btn btn-outline-primary btn-lg btn-block">Register</button>
     </form>
+    <hr>
+    {{ user | json }}
 </div>
 
