--- a/Angular/registrationForm/src/app/app.component.html
+++ b/Angular/registrationForm/src/app/app.component.html
@@ -4,7 +4,7 @@
     </nav>
   <hr>
 
-  <div *ngIf="form.valid">
+  <div id='valid' *ngIf="form.valid">
     <p>Thank you for registering with us {{ user.fName }}.</p>
     <p>We just sent you a confirmation email at {{ user.email }},and</p>
     <p>we will send all mail to {{ user.address }}, {{ user.city }} {{ user.state }}.</p>
@@ -13,98 +13,155 @@
 
   <form (submit)="form.valid && onSubmit($event, form)" #form='ngForm'>
 
+    <div class="form-group col-md-6">
+      <label>First Name</label>
+      <input
+      type="text"
+      class="form-control"
+      name='fName'
+      placeholder="First Name"
+      required
+      minlength='2'
+      maxlength='24'
+      [(ngModel)]="user.fName"
+      #fName='ngModel'
+      >
+    </div>
+    <span class="errors" *ngIf='(fName.touched || fName.dirty) && fName.errors' class="alert alert-danger">
+      <span class="errors" *ngIf='fName.errors.required'>
+        First Name is required
+      </span>
+      <span class="errors" *ngIf='fName.errors.minlength'>
+        First Name must be at least {{ fName.errors.minlength.requiredLength }} characters
+      </span>
+    </span>
+
+    <div class="form-group col-md-6">
+      <label>Last Name</label>
+      <input
+      type="text"
+      class="form-control"
+      name='lName'
+      placeholder="Last Name"
+      required
+      minlength="2"
+      maxlength="24"
+      [(ngModel)]="user.lName"
+      #lName='ngModel'
+      >
+    </div>
+    <span class="errors" *ngIf='(lName.touched || lName.dirty) && lName.errors' class="alert alert-danger">
+      <span class="errors" *ngIf='lName.errors.required'>
+        Last Name is required
+      </span>
+      <span class="errors" *ngIf='lName.errors.minlength'>
+        Last Name must be at least {{ lName.errors.minlength.requiredLength }} characters
+      </span>
+    </span>
+
+    <div class="form-group col-md-6">
+      <label>Email</label>
+      <input
+      type="email"
+      class="form-control"
+      name='email'
+      placeholder="Email"
+      required
+      minlength="4"
+      maxlength="34"
+      [(ngModel)]="user.email"
+      #email='ngModel'
+      >
+    </div>
+    <span class="errors" *ngIf='(email.touched || email.dirty) && email.errors' class="alert alert-danger">
+      <span class="errors" *ngIf='email.errors.required'>
+        Email is required
+      </span>
+      <span class="errors" *ngIf='email.errors.pattern'>
+        Email must be in proper format
+      </span>
+    </span>
+
+    <div class="form-group col-md-6">
+      <label>Password</label>
+      <input
+      type="password"
+      class="form-control"
+      name='password'
+      placeholder="Password"
+      required
+      minlength="8"
+      maxlength="24"
+      pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}$"
+      [(ngModel)]="user.password"
+      #password='ngModel'
+      >
+    </div>
+    <span class="errors" *ngIf='(password.touched || password.dirty) && password.errors' class="alert alert-danger">
+      <span class="errors" *ngIf='password.errors.required'>
+        Password is required
+      </span>
+      <span class="errors" *ngIf='password.errors.pattern'>
+        Password must be 8 characters long, and contain a number, uppercase and special character
+      </span>
+    </span>
+
+    <!-- <div class="form-group col-md-6">
+      <label>Verify Password</label>
+      <input
+      type="password"
+      class="form-control"
+      name='passwordConfirm'
+      placeholder="Confirm Password"
+      required
+      minlength="8"
+      maxlength="24"
+      pattern='password.value'
+      [(ngModel)]="user.passwordConfirm"
+      #passwordConfirm='ngModel'
+      >
+    </div>
+    <span class="errors" *ngIf='(passwordConfirm.touched || passwordConfirm.dirty) && passwordConfirm.errors' class="alert alert-danger">
+      <span class="errors" *ngIf='passwordConfirm.errors.required'>
+        Please re-enter password
+      </span>
+      <span class="errors" *ngIf='passwordConfirm.value !== password.value'>
+        Passwords must match
+      </span>
+    </span> -->
+
+    <div class="form-group col-md-8">
+      <label>Address</label>
+      <input
+      type="text"
+      class="form-control"
+      name='address'
+      placeholder="1234 Main St"
+      required
+      [(ngModel)]="user.address"
+      #address='ngModel'
+      >
+    </div>
+    <span class="errors" *ngIf='(address.touched || address.dirty) && address.errors' class="alert alert-danger">
+      <span class="errors" *ngIf='address.errors.required'>
+        Address is required
+      </span>
+    </span>
+
+    <div class="form-group col-md-6">
+      <label>Address 2</label>
+      <input
+      type="text"
+      class="form-control"
+      name='unit'
+      placeholder="Apartment, studio, or floor"
+      [(ngModel)]="user.unit"
+      #unit='ngModel'
+      >
+    </div>
+
       <div class="form-row">
-        <div class="form-group col-md-6">
-          <label>First Name</label>
-          <input
-          type="text"
-          class="form-control"
-          name='fName'
-          placeholder="First Name"
-          required
-          minlength='2'
-          maxlength='24'
-          [(ngModel)]="user.fName"
-          #fName='ngModel'
-          >
-        </div>
-
-        <div class="form-group col-md-6">
-          <label>Last Name</label>
-          <input
-          type="text"
-          class="form-control"
-          name='lName'
-          placeholder="Last Name"
-          required
-          minlength="2"
-          maxlength="24"
-          [(ngModel)]="user.lName"
-          #lName='ngModel'
-          >
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label>Email</label>
-          <input
-          type="email"
-          class="form-control"
-          name='email'
-          placeholder="Email"
-          required
-          minlength="4"
-          maxlength="34"
-          [(ngModel)]="user.email"
-          #email='ngModel'
-          >
-        </div>
-
-        <div class="form-group col-md-6">
-          <label>Password</label>
-          <input
-          type="password"
-          class="form-control"
-          name='password'
-          placeholder="Password"
-          required
-          minlength="10"
-          maxlength="24"
-          pattern="^([a-zA-Z0-9@*#]{8,15})$"
-          [(ngModel)]="user.password"
-          #password='ngModel'
-          >
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label>Address</label>
-        <input
-        type="text"
-        class="form-control"
-        name='address'
-        placeholder="1234 Main St"
-        required
-        [(ngModel)]="user.address"
-        #address='ngModel'
-        >
-      </div>
-
-      <div class="form-group">
-        <label>Address 2</label>
-        <input
-        type="text"
-        class="form-control"
-        name='unit'
-        placeholder="Apartment, studio, or floor"
-        [(ngModel)]="user.unit"
-        #unit='ngModel'
-        >
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-4">
           <label>City</label>
           <input
           type="text"
@@ -115,6 +172,11 @@
           #city='ngModel'
           >
         </div>
+        <span class="errors" *ngIf='(city.touched || city.dirty) && city.errors' class="alert alert-danger">
+          <span class="errors" *ngIf='city.errors.required'>
+            City is required
+          </span>
+        </span>
 
         <div class="form-group col-md-4">
           <label>State</label>
@@ -180,6 +242,11 @@
             <option value="WY">Wyoming</option>
           </select>
         </div>
+        <span class="errors" *ngIf='(state.touched || state.dirty) && state.errors' class="alert alert-danger">
+          <span class="errors" *ngIf='state.errors.required'>
+            State is required
+          </span>
+        </span>
 
         <div class="form-group col-md-2">
           <label>Zip</label>
@@ -192,6 +259,11 @@
           #zip='ngModel'
           >
         </div>
+        <span class="errors" *ngIf='(zip.touched || zip.dirty) && zip.errors' class="alert alert-danger">
+          <span class="errors" *ngIf='zip.errors.required'>
+            Zip is required
+          </span>
+        </span>
       </div>
 
       <div class="form-group">
