Layout app complete

--- a/Angular/layout/src/index.html
+++ b/Angular/layout/src/index.html
@@ -13,6 +13,9 @@
   <body>
 
       <app-root></app-root>
+      <app-alpha></app-alpha>
+      <app-beta></app-beta>
+      <app-gamma></app-gamma>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
