--- a/Angular/numbersWithService/src/app/gamma/gamma.component.html
+++ b/Angular/numbersWithService/src/app/gamma/gamma.component.html
@@ -1,3 +1,4 @@
-<p>
-  gamma works!
-</p>
+<div>
+  <button class="btn btn-outline-success" (click)="onClick()" >Generate Difference</button>
+  <h5>{{ difference }}</h5>
+</div>
