Ninja Gold complete and styled

--- a/Angular/ninjaGold/src/app/gold/location/location.component.html
+++ b/Angular/ninjaGold/src/app/gold/location/location.component.html
@@ -1,3 +1,22 @@
-<p>
-  location works!
-</p>
+<div class="locatoinMain">
+  <div class="locations">
+    <h3>Farm</h3>
+    <p>Earns 2 - 5 Gold</p>
+    <button class="btn btn-outline-success float-right" (click)='farmClick()'>Farm</button>
+  </div>
+  <div class="locations">
+    <h3>Cave</h3>
+    <p>Earns 5 - 10 Gold</p>
+    <button class="btn btn-outline-warning float-right" (click)='caveClick()'>Cave</button>
+  </div>
+  <div class="locations">
+    <h3>House</h3>
+    <p>Earns 7 - 15 Gold</p>
+    <button class="btn btn-outline-primary float-right" (click)='houseClick()'>House</button>
+  </div>
+  <div class="locations">
+    <h3>Casino</h3>
+    <p>Earn/Lose 100 Gold</p>
+    <button class="btn btn-outline-danger float-right" (click)='casinoClick()'>Casino</button>
+  </div>
+</div>
