--- a/Angular/angular-service-http-app/src/app/alpha/alpha.component.html
+++ b/Angular/angular-service-http-app/src/app/alpha/alpha.component.html
@@ -1,3 +1,6 @@
-<p>
-  alpha works!
-</p>
+<h5>Alpha Component</h5>
+<form (submit)="onSubmit()">
+  <input type="text" name="newTask" [(ngModel)]="newTask"/>
+  <input type="text" name="newTask" [(ngModel)]="newTask"/>
+  <input type="submit">
+</form>
