gitHub Score complete

--- a/Angular/gitHub-score/src/app/app.component.html
+++ b/Angular/gitHub-score/src/app/app.component.html
@@ -6,7 +6,7 @@
           Github Username:
           <input type="text" name='username' required [ngModel]="username">
         </label>
-        <button [disabled]="form.invalid">Calculate my Github Score</button>
+        <button class="btn btn-success" [disabled]="form.invalid">Calculate my Github Score</button>
       </form>
     </section>
     <section class="display">
